// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallations should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        Installations
      </mock-styled.h1>
      <mock-styled.p
        classname="mock-css. mock-css."
      >
        The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
        <a>
           see here
        </a>
        .
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 2.5rem;
"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
      >
        <mock-styled.div>
          <mock-styled.div>
            Customer Name
          </mock-styled.div>
          <mock-styled.div>
            Reapit Customer Code
          </mock-styled.div>
          <mock-styled.div>
            Customer Address
          </mock-styled.div>
          <mock-styled.div>
            Date Installed
          </mock-styled.div>
          <mock-styled.div>
            Installed By
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Reapit Customer Code"
              >
                RES
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.button
                    classname="mock-css."
                  >
                    <mock-styled.div />
                    Show Installed Offices
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    type="button"
                  >
                    <mock-styled.div />
                    Uninstall
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Customer Name"
              >
                Foo Bar
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Reapit Customer Code"
              >
                MXX
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.button
                    classname="mock-css."
                    type="button"
                  >
                    <mock-styled.div />
                    Uninstall
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.button
          data-testid="back-button"
          type="button"
        >
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          data-testid="forward-button"
          type="button"
        >
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="mock-css. mock-css."
        >
          <mock-styled.div />
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      Installations
    </mock-styled.h1>
    <mock-styled.p
      classname="mock-css. mock-css."
    >
      The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
      <a>
         see here
      </a>
      .
    </mock-styled.p>
    <mock-styled.div
      classname="mock-css.
  margin-bottom: 2.5rem;
"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
    >
      <mock-styled.div>
        <mock-styled.div>
          Customer Name
        </mock-styled.div>
        <mock-styled.div>
          Reapit Customer Code
        </mock-styled.div>
        <mock-styled.div>
          Customer Address
        </mock-styled.div>
        <mock-styled.div>
          Date Installed
        </mock-styled.div>
        <mock-styled.div>
          Installed By
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.span
              classname="mock-css."
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Customer Name"
            >
              Reapit Sales
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Reapit Customer Code"
            >
              RES
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.button
                  classname="mock-css."
                >
                  <mock-styled.div />
                  Show Installed Offices
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                  type="button"
                >
                  <mock-styled.div />
                  Uninstall
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.span
              classname="mock-css."
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Customer Name"
            >
              Foo Bar
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Reapit Customer Code"
            >
              MXX
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.button
                  classname="mock-css."
                  type="button"
                >
                  <mock-styled.div />
                  Uninstall
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div>
      <mock-styled.button
        data-testid="back-button"
        type="button"
      >
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
      <mock-styled.div>
        <mock-styled.input
          value="1"
        />
         of 
        1
      </mock-styled.div>
      <mock-styled.button
        data-testid="forward-button"
        type="button"
      >
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="mock-css. mock-css."
      >
        <mock-styled.div />
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        Installations
      </mock-styled.h1>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="mock-css. mock-css."
        >
          <mock-styled.div />
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      Installations
    </mock-styled.h1>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="mock-css. mock-css."
      >
        <mock-styled.div />
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when no installations 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        Installations
      </mock-styled.h1>
      <mock-styled.div
        classname="mock-css. mock-css. mock-css. mock-css."
      >
        <div
          class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
            style="font-size: 1.25rem;"
          >
            <svg
              style="font-size: 1.25rem;"
            />
          </mock-styled.span>
        </div>
        <div
          class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
        >
          No installations for the application.
        </div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="mock-css. mock-css."
        >
          <mock-styled.div />
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      Installations
    </mock-styled.h1>
    <mock-styled.div
      classname="mock-css. mock-css. mock-css. mock-css."
    >
      <div
        class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
        data-testid="close-icon"
      >
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
          style="font-size: 1.25rem;"
        >
          <svg
            style="font-size: 1.25rem;"
          />
        </mock-styled.span>
      </div>
      <div
        class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
      >
        No installations for the application.
      </div>
    </mock-styled.div>
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="mock-css. mock-css."
      >
        <mock-styled.div />
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match a snapshot when no response 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        Installations
      </mock-styled.h1>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="mock-css. mock-css."
        >
          <mock-styled.div />
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      Installations
    </mock-styled.h1>
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="mock-css. mock-css."
      >
        <mock-styled.div />
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallations should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        Installations
      </mock-styled.h1>
      <mock-styled.p
        classname="mock-css. mock-css."
      >
        The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
        <a>
           see here
        </a>
        .
      </mock-styled.p>
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 2.5rem;
"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
      >
        <mock-styled.div>
          <mock-styled.div>
            Customer Name
          </mock-styled.div>
          <mock-styled.div>
            Reapit Customer Code
          </mock-styled.div>
          <mock-styled.div>
            Customer Address
          </mock-styled.div>
          <mock-styled.div>
            Date Installed
          </mock-styled.div>
          <mock-styled.div>
            Installed By
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Reapit Customer Code"
              >
                RES
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.button
                    classname="mock-css."
                  >
                    <mock-styled.div />
                    Show Installed Offices
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    type="button"
                  >
                    <mock-styled.div />
                    Uninstall
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Customer Name"
              >
                Foo Bar
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Reapit Customer Code"
              >
                MXX
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Customer Address"
              >
                1 Big House Something Something UK BB1 1BB
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css. mock-css.
  font-size: 1.5rem;
"
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.button
                    classname="mock-css."
                    type="button"
                  >
                    <mock-styled.div />
                    Uninstall
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.button
          data-testid="back-button"
          type="button"
        >
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          data-testid="forward-button"
          type="button"
        >
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="mock-css. mock-css."
        >
          <mock-styled.div />
          <mock-styled.span
            classname="mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      Installations
    </mock-styled.h1>
    <mock-styled.p
      classname="mock-css. mock-css."
    >
      The table below gives you the information you need to understand Reapit Client organisations that have installed your application for use. In addition, you can force terminate a customer installation by using the call to action on each row. For more information on the installations table
      <a>
         see here
      </a>
      .
    </mock-styled.p>
    <mock-styled.div
      classname="mock-css.
  margin-bottom: 2.5rem;
"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
    >
      <mock-styled.div>
        <mock-styled.div>
          Customer Name
        </mock-styled.div>
        <mock-styled.div>
          Reapit Customer Code
        </mock-styled.div>
        <mock-styled.div>
          Customer Address
        </mock-styled.div>
        <mock-styled.div>
          Date Installed
        </mock-styled.div>
        <mock-styled.div>
          Installed By
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.5rem;
"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.span
              classname="mock-css."
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Customer Name"
            >
              Reapit Sales
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Reapit Customer Code"
            >
              RES
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.button
                  classname="mock-css."
                >
                  <mock-styled.div />
                  Show Installed Offices
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                  type="button"
                >
                  <mock-styled.div />
                  Uninstall
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.span
              classname="mock-css."
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Customer Name"
            >
              Foo Bar
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Reapit Customer Code"
            >
              MXX
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Customer Address"
            >
              1 Big House Something Something UK BB1 1BB
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Your%20recent%20installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css. mock-css.
  font-size: 1.5rem;
"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.button
                  classname="mock-css."
                  type="button"
                >
                  <mock-styled.div />
                  Uninstall
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div>
      <mock-styled.button
        data-testid="back-button"
        type="button"
      >
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
      <mock-styled.div>
        <mock-styled.input
          value="1"
        />
         of 
        1
      </mock-styled.div>
      <mock-styled.button
        data-testid="forward-button"
        type="button"
      >
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="mock-css. mock-css."
      >
        <mock-styled.div />
        <mock-styled.span
          classname="mock-css.
  font-size: 1.5rem;
"
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
